# time-tracker

./: .env.example  .gitignore  CMakeLists.txt  docker-compose.yml  main.cpp
include/app/: app_types.h
include/app/auth/: auth_middleware.h  auth_service.h  jwt_service.h  models.h  user_store.h
include/app/db/: postgres.h
include/app/http/: json_response.h
include/app/reports/: models.h  report_service.h
include/app/routes/: auth_routes.h  report_routes.h  system_routes.h  task_routes.h  time_entry_routes.h  timer_routes.h
include/app/tasks/: models.h  task_service.h  task_store.h
include/app/time_entries/: models.h  time_entry_service.h  time_entry_store.h
include/app/timers/: models.h  timer_service.h  timer_store.h
src/app/auth/: auth_middleware.cpp  auth_service.cpp  jwt_service.cpp  user_store.cpp
src/app/db/: postgres.cpp
src/app/reports/: report_service.cpp
src/app/routes/: auth_routes.cpp  report_routes.cpp  system_routes.cpp  task_routes.cpp  time_entry_routes.cpp  timer_routes.cpp
src/app/tasks/: task_service.cpp  task_store.cpp
src/app/time_entries/: time_entry_service.cpp  time_entry_store.cpp
src/app/timers/: timer_service.cpp  timer_store.cpp
